src/test/ui/generator/no-arguments-on-generators.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0628]: generators cannot have explicit arguments
  --> $DIR/no-arguments-on-generators.rs:4:15
   |
LL |     let gen = |start| {
   |               ^^^^^^^

error: aborting due to previous error

=======
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
